# hs-lorem

./: .ghci  .gitignore  COPYING  LICENSE  README.md  lorem.cabal
src/Text/: Lorem.hs
src/Text/Lorem/: Core.hs  Words.hs
